fix: bio-intro, spacing and padding of main content

--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,8 @@ body {
     background-color: var(--color-bg);
     color: var(--color-text);
     font-weight: 400;
-    font-size: clamp(0.92rem, 1.1vw, 1.01rem);
-    line-height: 1.3;
+    font-size: clamp(0.92rem, 1.15vw, 1.01rem);
+    line-height: 1.2;
     min-height: 100vh;
     padding-top: 56px; /* Prevent content from hiding under fixed nav */
 }
@@ -226,7 +226,7 @@ h1, h2, h3, h4, h5, h6{
     margin: 0 auto;
     background-color: var(--color-bg);
     color: var(--color-text);
-    padding: 0 clamp(10px, 5vw, 50px) clamp(10px, 5vw, 50px) clamp(10px, 5vw, 50px);
+    padding: 10px clamp(7px, 5vw, 35px) clamp(10px, 5vw, 50px);
     border-radius: 8px;
     box-sizing: border-box;
     padding-bottom: 20px;
@@ -252,14 +252,15 @@ a:hover {
 
 .bio-container {
     display: flex;
-    align-items: flex-start;
+    /* align-items: flex-start; */
     margin-bottom: 10px;
 }
 .bio-text {
     flex: 2;
-    margin-top: 18px;
+    margin-top: 15px;
     text-align: justify;
 }
+
 .bio-image {
     display: flex;
     flex-direction: column;
@@ -267,11 +268,11 @@ a:hover {
     align-items: center;
 }
 .bio-image img {
-    margin-top: 33px;
+    margin-top: 35px;
     max-width: 100%;
     margin-left: 30px;
-    width: 180px;
-    height: 180px;
+    width: 190px;
+    height: 190px;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
 }
@@ -283,6 +284,16 @@ a:hover {
     font-size: 1.3em;
     font-weight: 600;
     margin-left: 30px;
+}
+@media (max-width: 1399px) {
+    #intro {
+        margin-top: 20px;
+    }
+    .bio-image img {
+        margin-top: 35px;
+        width: 170px;
+        height: 170px;   
+    }
 }
 @media (max-width: 768px) {
     .bio-container { flex-direction: column; }
